entity_macros/tests/ui/derive/ent/missing-id.stderr
error: No id field provided
 --> $DIR/missing-id.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
